# oscurl

./: .gitignore  README.md  README.rst  oscurl  requirements.txt  setup.cfg  tox.ini
oscurl/: oscurl.py
