[metadata]
name = oscurl
summary = cURL-like tool to access OpenStack APIs with keystone auth
description-file =
    README.md
author = Akira Yoshiyama
author-email = akirayoshiyama@gmail.com
home-page = https://github.com/yosshy/oscurl
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    oscurl

[entry_points]
console_scripts =
    oscurl = oscurl.oscurl:main

[wheel]
universal = 1
